--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,4 @@ title: Asa H
 logo: /assets/image.png
 #description: text below image
 theme: jekyll-theme-minimal
+![histogram-example-2](assets/histogram-example-2.png) 
